app/themes/omeukaprologue/assets/css/main.css
/* ... */
#ukhomelink .menu-icon .navicon:before,
#ukhomelink .menu-icon .navicon:after {
  background: #fff;
  content: '';
  display: block;
  height: 100%;
  position: absolute;
  width: 100%;
}

#ukhomelink .menu-icon .navicon:before {
  top: 5px;
}

#ukhomelink .menu-icon .navicon:after {
  top: -5px;
}

/* menu btn */

#ukhomelink .menu-btn {
  display: none;
}

#ukhomelink .menu-btn:checked ~ .menu {
  max-height: 240px;
}

#ukhomelink .menu-btn:checked ~ .menu-icon .navicon {
  background: transparent;
}

#ukhomelink .menu-btn:checked ~ .menu-icon .navicon:before {
  transform: rotate(-45deg);
}

#ukhomelink .menu-btn:checked ~ .menu-icon .navicon:after {
  transform: rotate(45deg);
}

#ukhomelink .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:before,
#ukhomelink .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:after {
  top: 0;
}

/* 48em = 768px */

@media (min-width: 48em) {
  #ukhomelink li {
    float: left;
    margin-top:.5em;
  }
  #ukhomelink li a {
    padding: 0px 20px;
  }
  #ukhomelink .menu {
    margin-top: 0;
    clear: none;
    max-height: none;
    background:#282828;
    margin-bottom: 1em;
  }

  #ukhomelink .menu-icon {
    display: none;
  }
}

@media screen and (max-width: 768px) {
    #ukhomelink .menu {
        margin-top: 125px !important;
        position: absolute;
    }

    #top > div > header > div > div > a > img {
        max-height: 52px;
        float: none;
        padding-bottom: 2px;
        margin-left: 30%;
    }

    #top > div > header > div:nth-of-type(2) > div:nth-of-type(1) {
        width: 100%;
    }

    #copyright-bar > ul:nth-of-type(2) {
        margin-top: 20px;
    }
}

#top > div > footer > form {
    width: 100%;
}

#top > div > header > div > div > a > img {
    max-height: 52px;
    float: left;
    padding-bottom: 2px;
}

summary {
    outline: none;
    font-size: 16px;
    float: left;
    padding-left: 10px;
    position: relative;
    width: 100%;
    background: #282828;
    color: #ffffff;
}

.active_facets, .facets {
    width: 100%;
    text-align: left;
    font-size: 16px;
    padding-bottom: 40px;
    padding-top: 0px;
}

.active_facets ul {
    width: 100%;
    padding: 0 1em !important;
}

.facets > article > details > ul > li {
    margin-right: 0px;
    line-height: 2em;
    padding: 5px 0;
}

.facets > article > details > ul > li > a {
    margin: 0;
    display: block;
    width: 100%;
    height: 100%;
    padding: 0 5px 0 5px;
}

.facets > article > details > ul > li:hover {
    background: lightgray;
}

#top2 > div {
     background-size: 100% 100%;
}

#facet_group, .facets article {
     width: 100%;
}

.facets>article>details>ul>li:nth-child(odd) {
     background: #ffffff;
}

.active_facets {
     background: rgb(0, 0, 0);
     background: rgba(0, 0, 0, 0.3);
     margin: 0 0px 0px !important;
}

#facet_group {
    width: 100%;
}

.facets article {
    width: 100%;
}

.facet-count {
    float: right;
}

.form-group {
    width: 50%;
    float: right;
    margin-right: 2%;
}

.form-group-brief {
    padding-top: 19px;
    width: 100%;
    margin-top: 20px;
    height: 100px;
}

#top2 > div > footer > form > div > h4 {
    margin-bottom: 50px;
    color: #fff;
}

#top > div > footer > form > div > h4 {
    margin-bottom: 50px;
    color: #fff;
}

#search > .form-group > * {
    font-size: 15px;
    text-align: left;
    line-height: 1.4;
    width: 80%;
    margin-left: 5%;
    color: #ffffff;
}

#search > .form-group > * a {
    color: #0087f8;
}

.form-group {
    background: rgb(22,21,20);
    background: rgba(22,21,20,0.7);
    padding-top: 19px;
    margin-bottom: 5%;
    min-height: 210px;
    max-height: 280px;
}

@supports (display: flex) {
    #search > .form-group {
        display: flex;
        flex-direction: column;
    }
}

#search_items_count {
    text-align: left;
    font-size: 15px;
    float: left;
    line-height: 1.4;
    padding-bottom: 5px;
    width: 80%;
    margin-left: 5%;
    color: aliceblue;
}

#site_description {
    text-align: left;
    font-size: 13px;
    float: left;
    line-height: 1.4;
    padding-bottom: 10px;
    width: 80%;
    margin-left: 5%;
    color: aliceblue;
}

#result_controls {
    margin-top: 10px;
    width: 100%;
    float: left;
}

#result_controls_text {
    font-size: 14px;
    color: #333;
    cursor: pointer;
    color: aliceblue;
}

#breadcrumb {
    display: inline;
    color: #333;
    float: right;
    margin-right: 4%;
}

#app {
     padding: 20px;
}

#search {
    margin-top: 100px;
}

#search-brief {
    text-align: center;
}

#featured_image_box {
    right: 0;
    bottom: 0;
    font-size: 12px;
    width: 100%;
    float: right;
    color: aliceblue;
    background: linear-gradient(to bottom, rgba(40,40,40,0) 0%, rgba(40,40,40,0.8) 50%, rgba(40,40,40,1) 75%);
}

#featured_image_text {
    float: right;
    margin-right: 20px;
    margin-left: 1em;
}

a:hover {
        color: #1897d4 !important;
    }

#top > div > header > div > div > nav > ul {
    margin-bottom: 0em;
}

#top2 > div > header > div > div > nav > ul {
    margin-bottom: 0em;
}

.result-list {
    width: 100%;
}

.result-list {
    font-size: 16px;
}

.result-list h3 {
    font-size: 17px;
}

.result-number {
    line-height: 1.5em;
}

.result-item {
    width: 100%;
}

.result-item a {
    color: #005dab;
}

.result-item .result-summary {
    width: 100%;
    padding-bottom: 1em;
}

.result-summary {
    padding-right: 1em;
}

.result-metadata {
    margin-left: 1em;
    padding-left: 1em;
    border-left: 4px solid #f7f7f7;
}

.result-metadata-label {
    font-weight: bold;
}

@supports (display: grid) {
    .result-item {
        display: grid;
        grid-template-columns: auto minmax(150px, 1fr);
        grid-gap: 1em;
    }
}

.image-placeholder {
    width: 100%;
    max-width: 250px;
    height: auto;
}

.image-placeholder img {
    max-width: 250px;
    max-height: 250px;
    height: auto;
    border: 1px solid lightgray;
    padding: 1px;
}
/* ... */

